# serializer version: 1
# name: TestLCSCall.test_call_as_distance[event]
  25.0
# ---
# name: TestLCSCall.test_call_as_distance[interval]
  9.0
# ---
# name: TestLCSCall.test_call_as_distance[state]
  5.0
# ---
# name: TestLCSCall.test_call_default[event]
  2.0
# ---
# name: TestLCSCall.test_call_default[interval]
  0.0
# ---
# name: TestLCSCall.test_call_default[state]
  0.0
# ---
